【去除 sun base64编码，Bean复制覆盖父类属性】

--- a/CommonModule/pom.xml
+++ b/CommonModule/pom.xml
@@ -90,12 +90,13 @@
             <artifactId>log4j-over-slf4j</artifactId>
             <version>1.7.25</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-codec/commons-codec -->
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
+            <version>1.11</version>
         </dependency>
+
 
 
     </dependencies>
