[拦截器修改，创建，修改笔记，数据库字段更改]

--- a/CoreModule/src/test/resources/application.yml
+++ b/CoreModule/src/test/resources/application.yml
@@ -4,9 +4,9 @@ spring:
   application:
     name: edit-server
   datasource:
-    url: jdbc:mysql://localhost:3306/cloud_edit?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
+    url: jdbc:mysql://106.14.221.254:3306/cloud_edit?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC&useSSL=false
     username: root
-    password: root
+    password: hu123456
     driver-class-name: com.mysql.cj.jdbc.Driver
   devtools:
     restart:
