--- a/CoreModule/pom.xml
+++ b/CoreModule/pom.xml
@@ -179,6 +179,8 @@
   </dependencies>
 
   <build>
+
+    <finalName>kpi-backend-${version}</finalName>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
@@ -186,13 +188,30 @@
       </resource>
     </resources>
     <plugins>
-
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
       </plugin>
-
-
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.1.0</version>
+        <configuration>
+          <appendAssemblyId>false</appendAssemblyId>
+          <finalName>${parent.artifactId}-${version}</finalName>
+          <descriptors>
+            <descriptor>package.xml</descriptor>
+          </descriptors>
+        </configuration>
+        <executions>
+          <execution>
+            <id>make-assembly</id> <!-- this is used for inheritance merges -->
+            <phase>package</phase> <!-- bind to the packaging phase -->
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
