--- a/CoreModule/pom.xml
+++ b/CoreModule/pom.xml
@@ -180,7 +180,7 @@
 
   <build>
 
-    <finalName>kpi-backend-${version}</finalName>
+    <finalName>${parent.artifactId}-${version}</finalName>
     <resources>
       <resource>
         <directory>src/main/resources</directory>
