--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@
 *.iml
 */target/*
 
+.settings/
+*/.classpath
+
+.project
+
 
 # Compiled class file
 *.class
@@ -27,5 +32,4 @@
 *.gz
 
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*/.factorypath
